Improved usability and refactored some code